2009-04-15  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Simon Hausmann.

        Fixed nit/typo in QWebElement documentation.

        * Api/qwebelement.cpp:

2009-04-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24841

        Fix linking against QtWebKit for Symbian and other platforms
        where the OS ABI distinguishes between an import or an export situation.

        * Api/qwebkitglobal.h: Instead of white-listing Win, remove the test.

2009-04-14  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Tor Arne Vestbø.

        Rename QWebElement::setHtml and html to setXml and toXml respectivily.
        
        Also add a mean to define the scope (inner or other).

        * Api/qwebelement.cpp:
        (QWebElement::setXml):
        (QWebElement::toXml):
        * Api/qwebelement.h:
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::textHtml):
        (tst_QWebElement::foreachManipulation):

2009-04-14  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Tor Arne Vestbø.

        Rename QWebElement::setText() and text() to ::setPlainText and
        ::toPlainText, respectively.

        * Api/qwebelement.cpp:
        (QWebElement::setPlainText):
        (QWebElement::toPlainText):
        * Api/qwebelement.h:
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::textHtml):
        (tst_QWebElement::simpleSelection):
        (tst_QWebElement::appendAndPrepend):
        (tst_QWebElement::insertBeforeAndAfter):
        (tst_QWebElement::replaceWith):
        (tst_QWebElement::wrap):
        (tst_QWebElement::firstChildNextSiblingWithTag):
        (tst_QWebElement::lastChildPreviousSiblingWithTag):

2009-04-06  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.
